add_executable(vector1 vector1.cpp)
add_executable(vector2 vector2.cpp)
add_executable(vector3 vector3.cpp)
add_executable(vector4 vector4.cpp)
add_executable(deque1 deque1.cpp)
add_executable(list1 list1.cpp)
add_executable(map1 map1.cpp)
add_executable(operations1 operations1.cpp)
add_executable(algo1 algo1.cpp)
add_executable(algo2 algo2.cpp)