if (UNIX)
if (APPLE)
include_directories(/opt/local/include)
link_directories(/opt/local/lib)
else()

endif()
else()
	if ( CMAKE_BUILD_TYPE STREQUAL "Release")
		link_directories( ../libs-win32/lib/release )
	else()
		link_directories( ../libs-win32/lib/debug )
	endif()
endif()

add_executable(matrix1 matrix1.cpp)
if(WIN32)
target_link_libraries(matrix1 armadillo openblas)
else()
target_link_libraries(matrix1 armadillo openblas)
endif()

add_executable(matrix2 matrix2.cpp)
if(WIN32)
target_link_libraries(matrix2 armadillo openblas)
else()
target_link_libraries(matrix2 armadillo openblas)
endif()

add_executable(matrix3 matrix3.cpp calfem.h calfem.cpp)
if(WIN32)
target_link_libraries(matrix3 armadillo openblas)
else()
target_link_libraries(matrix3 armadillo openblas)
endif()

add_executable(matrix4 matrix4.cpp calfem.h calfem.cpp)
if(WIN32)
target_link_libraries(matrix4 armadillo openblas)
else()
target_link_libraries(matrix4 armadillo openblas)
endif()

add_executable(matrix5 matrix5.cpp calfem.h calfem.cpp)
if(WIN32)
target_link_libraries(matrix5 armadillo openblas)
else()
target_link_libraries(matrix5 armadillo openblas)
endif()

add_executable(matrix1_eig matrix1_eig.cpp)
if(WIN32)
target_link_libraries(matrix1_eig openblas)
else()
target_link_libraries(matrix1_eig openblas)
endif()

add_executable(matrix2_eig matrix2_eig.cpp)
if(WIN32)
target_link_libraries(matrix2_eig openblas)
else()
target_link_libraries(matrix2_eig openblas)
endif()

add_executable(matrix3_eig matrix3_eig.cpp calfem_eig.h calfem_eig.cpp)
if(WIN32)
target_link_libraries(matrix3_eig openblas)
else()
target_link_libraries(matrix3_eig openblas)
endif()

add_executable(matrix4_eig matrix4_eig.cpp calfem_eig.h calfem_eig.cpp)
if(WIN32)
target_link_libraries(matrix4_eig openblas)
else()
target_link_libraries(matrix4_eig openblas)
endif()

add_executable(matrix5_eig matrix5_eig.cpp calfem_eig.h calfem_eig.cpp)
if(WIN32)
target_link_libraries(matrix5_eig openblas)
else()
target_link_libraries(matrix5_eig openblas)
endif()
