add_executable(classes1 classes1.cpp)
add_executable(classes2 classes2.cpp)
add_executable(shapes1 shapes1.cpp shape.h shape.cpp point.h point.cpp circle.h circle.cpp
rectangle.h rectangle.cpp)
add_executable(shapes2 shapes2.cpp shape.h shape.cpp point.h point.cpp
circle.h circle.cpp rectangle.h rectangle.cpp)
add_executable(shapes3 shapes3.cpp shape.h shape.cpp point.h point.cpp
circle.h circle.cpp rectangle.h rectangle.cpp composite.h composite.cpp)
add_executable(shapes4 shapes4.cpp shape.h shape.cpp point.h point.cpp
circle.h circle.cpp rectangle.h rectangle.cpp composite.h composite.cpp)
add_executable(shapes5 shapes5.cpp shape.h shape.cpp point.h point.cpp
circle.h circle.cpp rectangle.h rectangle.cpp composite.h composite.cpp)
add_executable(shapes6 shapes6.cpp shape.h shape.cpp point.h point.cpp
circle.h circle.cpp rectangle.h rectangle.cpp composite.h composite.cpp)
